API to list supported-countries for dropdowns
